--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -12,11 +12,21 @@
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for('about') }}">About</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('secure_page') }}">Dashboard</a>
+      </li>
     </ul>
-
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+        {% if current_user.is_authenticated %}
+          <li class="nav-item active">
+            <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+          </li>
+      {% else %}
+          <li class="nav-item active">
+            <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+          </li>
+      {% endif %}
       </li>
     </ul>
   </div>
