--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -20,7 +20,7 @@
       <li class="nav-item">
         {% if current_user.is_authenticated %}
           <li class="nav-item active">
-            <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+            <a class="nav-link" href="{{ url_for('logout') }}">{{current_user.first_name}} {{current_user.last_name}} </br> Logout  </a>
           </li>
       {% else %}
           <li class="nav-item active">
