--- a/app/templates/profiles.html
+++ b/app/templates/profiles.html
@@ -3,23 +3,15 @@
 {% block main %}
   <div class="gridview">
       {% for user in users %}
-        {% for image in images %}
-            {% if user.image_url ==  image %}
-            <div class="profilebox">
-        		<div class="profileimage"><img src="{{url_for('static', filename='uploads/'+image)}}" /></div>
-        		<div class="profiledetails">
-                  	<p><strong>{{ user.first_name }} {{ user.last_name }}</strong></p>
-                  	<p>{{ user.gender }}</p>
-                    <p>{{ user.location }}</p>
-                    <a href="{{ url_for('user_profile', filename= user.id ) }}"><button class="profilebutton" type="button">View Profile</button></a>
-        		</div>
+        <div class="profilebox">
+        	<div class="profileimage"><img src="{{url_for('static', filename='uploads/'+user.image_url)}}" /></div>
+        	<div class="profiledetails">
+                <p><strong>{{ user.first_name }} {{ user.last_name }}</strong></p>
+                <p>{{ user.gender }}</p>
+                <p>{{ user.location }}</p>
+                <a href="{{ url_for('user_profile', filename= user.id ) }}"><button class="profilebutton" type="button">View Profile</button></a>
         	</div>
-            {% endif %}
-    
-        {% endfor %}
-      
+        </div>
       {% endfor %}
     </div>
-
-
 {% endblock %}
